spacing fix

--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -46,11 +46,11 @@ h2.section_heading {
     font-size: 3.5rem;
   }
 
-  @media screen and (min-width: 1045px) {
-    font-size: 4rem;
+  @media screen and (min-width: 768px) {
+    font-size: 3rem;
   }
 
-  @media screen and (min-width: 1650px) {
-    font-size: 5.5rem;
+  @media screen and (min-width: 1450px) {
+    font-size: 4rem;
   }
 }
