--- a/src/styles/modules/_hero.scss
+++ b/src/styles/modules/_hero.scss
@@ -5,6 +5,10 @@
   position: relative;
   width: 100%;
 
+  @media screen and (min-width: 768px) {
+    margin-bottom: -20px;
+  }
+
   &:before {
     position: absolute;
     top: 0;
