--- a/src/styles/modules/_map.scss
+++ b/src/styles/modules/_map.scss
@@ -1,9 +1,6 @@
 .map-accordion-legend {
   position: relative;
-
-  @media screen and (min-width: 1400px) {
-    margin-bottom: 200px;
-  }
+  z-index: 1;
 
   button {
     padding: 0;
@@ -59,7 +56,10 @@
     }
 
     .card-body {
-      padding: 10px 25px;
+      background-color: $page-bg-color;
+      padding: 20px 35px;
+      border-bottom-left-radius: 3px;
+      border-bottom-right-radius: 3px;
 
       ol {
         padding: 0;
@@ -129,30 +129,22 @@
   position: unset;
 }
 
-.neighbourhood-header {
-  h2.section_heading {
-    @media screen and (min-width: 992px) and (max-width: 1350px) {
-      font-size: 4rem;
-    }
-  }
-}
-
 .map-markers {
   position: absolute;
-  top: 0;
+  top: 15px;
   right: 0;
   width: 60vw;
-  height: 35vw;
+  height: 60vh;
   overflow: hidden;
 
   @media screen and (max-width: 991px) {
     position: relative;
     right: 0;
     left: 0;
-    width: 86vw;
+    width: 100%;
     height: 46vw;
     background-image: url("../images/map.jpg");
-    background-size: 86vw 46vw;
+    background-size: 100% 46vw;
     background-repeat: no-repeat;
     border: 1px solid #102842;
   }
@@ -196,6 +188,12 @@
 
 .marker-category-header {
   min-width: 325px;
+
+  .marker-category {
+    background-color: $page-bg-color;
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
+  }
 
   &.active {
     .marker-category {
@@ -313,7 +311,7 @@
 .map-container {
   position: absolute;
   width: 60vw;
-  height: 35vw;
+  height: 100%;
   top: 15px;
   right: 0;
   overflow: hidden;
@@ -321,6 +319,7 @@
 
   @media screen and (max-width: 991px) {
     display: none;
+    height: 46vw;
   }
 }
 
