--- a/src/styles/modules/_register.scss
+++ b/src/styles/modules/_register.scss
@@ -4,6 +4,7 @@
 
   @media screen and (min-width: 992px) {
     flex-direction: row;
+    height: 60vh;
   }
 
   .column_image__block {
@@ -14,7 +15,7 @@
 
     @media screen and (min-width: 992px) {
       width: 40%;
-      height: 670px;
+      height: 60vh;
       order: inherit;
     }
 
@@ -59,9 +60,14 @@
   justify-content: flex-end;
   flex-direction: row;
   margin-top: 50px;
+  height: auto;
 
   @media screen and (min-width: 992px) {
-    margin-top: 200px;
+    margin-top: 20vh;
+  }
+
+  @media screen and (min-width: 1400px) {
+    margin-top: 15vh;
   }
 
   .space_block {
